added navbar section

--- a/index.html
+++ b/index.html
@@ -4,8 +4,70 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <!-- daisy ui -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@5"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <!-- tailwind cdn -->
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
   <body>
-    <h1>This is my website</h1>
+    <!-- nav bar section-->
+    <section
+      class="navbar-parent border-2 border-green-600 bg-[#FFFFFF] flex justify-between h-20"
+    >
+      <!-- image and heading part  -->
+      <div class="flex justify-center items-center">
+        <img class="h-1/2" src="./assets/logo.png" alt="" />
+        <h1 class="p-4 text-[#006747] font-extrabold">
+          Emergency <br />
+          Service
+        </h1>
+      </div>
+      <!-- button part  -->
+      <div class="p-5">
+        <!-- btn-1  -->
+        <button
+          class="btn btn-sm-1 bg-[#41FF6B1A] h-[26px] w-[60px] rounded-3xl"
+        >
+          0
+          <img class="h-1/2" src="./assets/heart.png" alt="" />
+        </button>
+        <!-- btn-2  -->
+        <button
+          class="btn btn-sm-2 bg-[#41FF6B1A] h-[26px] w-[60px] rounded-3xl"
+        >
+          <span>100</span><img class="h-1/2" src="./assets/coin.png" alt="" />
+        </button>
+        <button
+          class="btn btn-sm-3 h-[26px] w-[60px] rounded-3xl bg-[#00A63E] text-[#FFFFFF] font-semibold"
+        >
+          Copy
+        </button>
+      </div>
+    </section>
+    <!-- banner section-->
+    <!-- <section
+      class="border-2 border-green-600 banner-parent bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] h-[239px] flex flex-col text-center items-center p-12"
+    >
+      <img
+        class="w-[92px] h-[92px] items-center"
+        src="./assets/logo-dark.png"
+        alt=""
+      />
+      <h1 class="text-[#FFFFFF] font-bold">Emergency Service Directory</h1>
+      <p class="text-[#FFFFFF] font-semibold">
+        Government Emergency Services at Your Fingertip – A Project by
+        Government of the People’s Republic of Bangladesh
+      </p>
+    </section> -->
+    <!-- card section-->
+    <section>
+      <!-- card-1  -->
+    </section>
+    <!-- call history section -->
   </body>
 </html>
