--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
     </section>
     <!-- banner section-->
-    <!-- <section
+    <section
       class="border-2 border-green-600 banner-parent bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] h-[239px] flex flex-col text-center items-center p-12"
     >
       <img
@@ -63,7 +63,7 @@
         Government Emergency Services at Your Fingertip – A Project by
         Government of the People’s Republic of Bangladesh
       </p>
-    </section> -->
+    </section>
     <!-- card section-->
     <section>
       <!-- card-1  -->
