--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <!-- font awesome cdn  -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <!-- daisy ui -->
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@5"
@@ -65,8 +73,234 @@
       </p>
     </section>
     <!-- card section-->
-    <section>
+    <section class="card-parent bg-[#F5FFF6] grid grid-cols-3 gap-5 p-5 w-3/4">
       <!-- card-1  -->
+      <div
+        class="h-[250px] w-[320px] border-2 border-gray-200 bg-[#FFFFFF] rounded-2xl p-2"
+      >
+        <div class="flex justify-between mb-5">
+          <img class="h-[32px] w-[32px]" src="./assets/ambulance.png" alt="" />
+          <i class="fa-regular fa-heart"></i>
+        </div>
+        <div class="flex flex-col justify-start items-start mb-5">
+          <h1 class="text-[#111111] font-bold">National Emergency Service</h1>
+          <p class="text-[#5C5C5C] font-medium">Service</p>
+          <div class="mt-5">
+            <p class="text-[#111111] font-extrabold">999</p>
+            <button class="btn btn-xs bg-[#5C5C5C] text-[#FFFFFF]">All</button>
+          </div>
+        </div>
+        <div class="mt-5 flex flex-row gap-5">
+          <button class="btn h-[40px] w-[140px] bg-[#FFFFFF] text-[#5C5C5C]">
+            <i class="fa-regular fa-copy"></i>Copy
+          </button>
+          <button class="btn h-[40px] w-[140px] bg-[#00A63E] text-[#FFFFFF]">
+            <i class="fa-solid fa-phone"></i>Call
+          </button>
+        </div>
+      </div>
+      <!-- card-2  -->
+      <div
+        class="h-[250px] w-[320px] border-2 border-gray-200 bg-[#FFFFFF] rounded-2xl p-2"
+      >
+        <div class="flex justify-between mb-5">
+          <img class="h-[32px] w-[32px]" src="./assets/ambulance.png" alt="" />
+          <i class="fa-regular fa-heart"></i>
+        </div>
+        <div class="flex flex-col justify-start items-start mb-5">
+          <h1 class="text-[#111111] font-bold">National Emergency Service</h1>
+          <p class="text-[#5C5C5C] font-medium">Service</p>
+          <div class="mt-5">
+            <p class="text-[#111111] font-extrabold">999</p>
+            <button class="btn btn-xs bg-[#5C5C5C] text-[#FFFFFF]">All</button>
+          </div>
+        </div>
+        <div class="mt-5 flex flex-row gap-5">
+          <button class="btn h-[40px] w-[140px] bg-[#FFFFFF] text-[#5C5C5C]">
+            <i class="fa-regular fa-copy"></i>Copy
+          </button>
+          <button class="btn h-[40px] w-[140px] bg-[#00A63E] text-[#FFFFFF]">
+            <i class="fa-solid fa-phone"></i>Call
+          </button>
+        </div>
+      </div>
+      <!-- card-3 -->
+      <div
+        class="h-[250px] w-[320px] border-2 border-gray-200 bg-[#FFFFFF] rounded-2xl p-2"
+      >
+        <div class="flex justify-between mb-5">
+          <img class="h-[32px] w-[32px]" src="./assets/ambulance.png" alt="" />
+          <i class="fa-regular fa-heart"></i>
+        </div>
+        <div class="flex flex-col justify-start items-start mb-5">
+          <h1 class="text-[#111111] font-bold">National Emergency Service</h1>
+          <p class="text-[#5C5C5C] font-medium">Service</p>
+          <div class="mt-5">
+            <p class="text-[#111111] font-extrabold">999</p>
+            <button class="btn btn-xs bg-[#5C5C5C] text-[#FFFFFF]">All</button>
+          </div>
+        </div>
+        <div class="mt-5 flex flex-row gap-5">
+          <button class="btn h-[40px] w-[140px] bg-[#FFFFFF] text-[#5C5C5C]">
+            <i class="fa-regular fa-copy"></i>Copy
+          </button>
+          <button class="btn h-[40px] w-[140px] bg-[#00A63E] text-[#FFFFFF]">
+            <i class="fa-solid fa-phone"></i>Call
+          </button>
+        </div>
+      </div>
+      <!-- card- 4-->
+      <div
+        class="h-[250px] w-[320px] border-2 border-gray-200 bg-[#FFFFFF] rounded-2xl p-2"
+      >
+        <div class="flex justify-between mb-5">
+          <img class="h-[32px] w-[32px]" src="./assets/ambulance.png" alt="" />
+          <i class="fa-regular fa-heart"></i>
+        </div>
+        <div class="flex flex-col justify-start items-start mb-5">
+          <h1 class="text-[#111111] font-bold">National Emergency Service</h1>
+          <p class="text-[#5C5C5C] font-medium">Service</p>
+          <div class="mt-5">
+            <p class="text-[#111111] font-extrabold">999</p>
+            <button class="btn btn-xs bg-[#5C5C5C] text-[#FFFFFF]">All</button>
+          </div>
+        </div>
+        <div class="mt-5 flex flex-row gap-5">
+          <button class="btn h-[40px] w-[140px] bg-[#FFFFFF] text-[#5C5C5C]">
+            <i class="fa-regular fa-copy"></i>Copy
+          </button>
+          <button class="btn h-[40px] w-[140px] bg-[#00A63E] text-[#FFFFFF]">
+            <i class="fa-solid fa-phone"></i>Call
+          </button>
+        </div>
+      </div>
+      <!-- card- 5-->
+      <div
+        class="h-[250px] w-[320px] border-2 border-gray-200 bg-[#FFFFFF] rounded-2xl p-2"
+      >
+        <div class="flex justify-between mb-5">
+          <img class="h-[32px] w-[32px]" src="./assets/ambulance.png" alt="" />
+          <i class="fa-regular fa-heart"></i>
+        </div>
+        <div class="flex flex-col justify-start items-start mb-5">
+          <h1 class="text-[#111111] font-bold">National Emergency Service</h1>
+          <p class="text-[#5C5C5C] font-medium">Service</p>
+          <div class="mt-5">
+            <p class="text-[#111111] font-extrabold">999</p>
+            <button class="btn btn-xs bg-[#5C5C5C] text-[#FFFFFF]">All</button>
+          </div>
+        </div>
+        <div class="mt-5 flex flex-row gap-5">
+          <button class="btn h-[40px] w-[140px] bg-[#FFFFFF] text-[#5C5C5C]">
+            <i class="fa-regular fa-copy"></i>Copy
+          </button>
+          <button class="btn h-[40px] w-[140px] bg-[#00A63E] text-[#FFFFFF]">
+            <i class="fa-solid fa-phone"></i>Call
+          </button>
+        </div>
+      </div>
+      <!-- card- 6-->
+      <div
+        class="h-[250px] w-[320px] border-2 border-gray-200 bg-[#FFFFFF] rounded-2xl p-2"
+      >
+        <div class="flex justify-between mb-5">
+          <img class="h-[32px] w-[32px]" src="./assets/ambulance.png" alt="" />
+          <i class="fa-regular fa-heart"></i>
+        </div>
+        <div class="flex flex-col justify-start items-start mb-5">
+          <h1 class="text-[#111111] font-bold">National Emergency Service</h1>
+          <p class="text-[#5C5C5C] font-medium">Service</p>
+          <div class="mt-5">
+            <p class="text-[#111111] font-extrabold">999</p>
+            <button class="btn btn-xs bg-[#5C5C5C] text-[#FFFFFF]">All</button>
+          </div>
+        </div>
+        <div class="mt-5 flex flex-row gap-5">
+          <button class="btn h-[40px] w-[140px] bg-[#FFFFFF] text-[#5C5C5C]">
+            <i class="fa-regular fa-copy"></i>Copy
+          </button>
+          <button class="btn h-[40px] w-[140px] bg-[#00A63E] text-[#FFFFFF]">
+            <i class="fa-solid fa-phone"></i>Call
+          </button>
+        </div>
+      </div>
+      <!-- card-7 -->
+      <div
+        class="h-[250px] w-[320px] border-2 border-gray-200 bg-[#FFFFFF] rounded-2xl p-2"
+      >
+        <div class="flex justify-between mb-5">
+          <img class="h-[32px] w-[32px]" src="./assets/ambulance.png" alt="" />
+          <i class="fa-regular fa-heart"></i>
+        </div>
+        <div class="flex flex-col justify-start items-start mb-5">
+          <h1 class="text-[#111111] font-bold">National Emergency Service</h1>
+          <p class="text-[#5C5C5C] font-medium">Service</p>
+          <div class="mt-5">
+            <p class="text-[#111111] font-extrabold">999</p>
+            <button class="btn btn-xs bg-[#5C5C5C] text-[#FFFFFF]">All</button>
+          </div>
+        </div>
+        <div class="mt-5 flex flex-row gap-5">
+          <button class="btn h-[40px] w-[140px] bg-[#FFFFFF] text-[#5C5C5C]">
+            <i class="fa-regular fa-copy"></i>Copy
+          </button>
+          <button class="btn h-[40px] w-[140px] bg-[#00A63E] text-[#FFFFFF]">
+            <i class="fa-solid fa-phone"></i>Call
+          </button>
+        </div>
+      </div>
+      <!-- card- 8-->
+      <div
+        class="h-[250px] w-[320px] border-2 border-gray-200 bg-[#FFFFFF] rounded-2xl p-2"
+      >
+        <div class="flex justify-between mb-5">
+          <img class="h-[32px] w-[32px]" src="./assets/ambulance.png" alt="" />
+          <i class="fa-regular fa-heart"></i>
+        </div>
+        <div class="flex flex-col justify-start items-start mb-5">
+          <h1 class="text-[#111111] font-bold">National Emergency Service</h1>
+          <p class="text-[#5C5C5C] font-medium">Service</p>
+          <div class="mt-5">
+            <p class="text-[#111111] font-extrabold">999</p>
+            <button class="btn btn-xs bg-[#5C5C5C] text-[#FFFFFF]">All</button>
+          </div>
+        </div>
+        <div class="mt-5 flex flex-row gap-5">
+          <button class="btn h-[40px] w-[140px] bg-[#FFFFFF] text-[#5C5C5C]">
+            <i class="fa-regular fa-copy"></i>Copy
+          </button>
+          <button class="btn h-[40px] w-[140px] bg-[#00A63E] text-[#FFFFFF]">
+            <i class="fa-solid fa-phone"></i>Call
+          </button>
+        </div>
+      </div>
+      <!-- card-9 -->
+      <div
+        class="h-[250px] w-[320px] border-2 border-gray-200 bg-[#FFFFFF] rounded-2xl p-2"
+      >
+        <div class="flex justify-between mb-5">
+          <img class="h-[32px] w-[32px]" src="./assets/ambulance.png" alt="" />
+          <i class="fa-regular fa-heart"></i>
+        </div>
+        <div class="flex flex-col justify-start items-start mb-5">
+          <h1 class="text-[#111111] font-bold">National Emergency Service</h1>
+          <p class="text-[#5C5C5C] font-medium">Service</p>
+          <div class="mt-5">
+            <p class="text-[#111111] font-extrabold">999</p>
+            <button class="btn btn-xs bg-[#5C5C5C] text-[#FFFFFF]">All</button>
+          </div>
+        </div>
+        <div class="mt-5 flex flex-row gap-5">
+          <button class="btn h-[40px] w-[140px] bg-[#FFFFFF] text-[#5C5C5C]">
+            <i class="fa-regular fa-copy"></i>Copy
+          </button>
+          <button class="btn h-[40px] w-[140px] bg-[#00A63E] text-[#FFFFFF]">
+            <i class="fa-solid fa-phone"></i>Call
+          </button>
+        </div>
+      </div>
+
+      <div class="call-history"></div>
     </section>
     <!-- call history section -->
   </body>
